--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,13 @@ disqusShortname = "themefisher-template" # get your shortname form here : https:
 [module.hugoVersion]
 extended = true
 min = "0.87.0"
-
+[module]
+  [[module.imports]]
+    path = "github.com/gethugothemes/bookworm-light"
+    disabled = false
+    [[module.imports.mounts]]
+      source = "assets"
+      target = "static"
 ############################# Image Processing ##############################
 [imaging]
 quality = "95"
