--- a/config.toml
+++ b/config.toml
@@ -68,7 +68,7 @@ color_primary = "#01AD9F"
 
 #################### default parameters ################################
 [params]
-logo = "images/procast.png"
+logo = "images/logo.png"
 logo_width = "200px"
 favicon = "images/favicon.png"
 # Meta data
