--- a/config.toml
+++ b/config.toml
@@ -155,5 +155,5 @@ url = "https://www.linkedin.com/"
 
 [[params.social]]
 icon = "lab la-github" # https://icons8.com/line-awesome
-url = "https://github.com/podcast-of-engineers"
+url = "https://github.com/podcast-of-engineers/podcast-of-engineers.github.io"
 
